src/test/ui/imports/bad-import-in-nested.stderr
error[E0432]: unresolved import `crate::C::AA`
  --> $DIR/bad-import-in-nested.rs:10:26
   |
LL |     use crate::C::{self, AA};
   |                          ^^ no `AA` in `C`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
